[package]
name = "nd-tokio-sse-codec"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio-util = { version = "0.7.15", features = [ "codec" ] }

[dev-dependencies]
tokio = { version = "1.44.2", features = [ "macros", "fs", "rt" ] }
tokio-stream = "0.1.17"
reqwest = { version = "0.12", features = [ "stream" ] }
futures-util = "0.3.31"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
strip = "symbols"
